--- a/views/index.html
+++ b/views/index.html
@@ -91,8 +91,8 @@
                                 <div class="product-f-image">
                                     <img src="{$value.desphoto}" alt="">
                                     <div class="product-hover">
-                                        <a href="#" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i> Comprar </a>
-                                        <a href="#" class="view-details-link"><i class="fa fa-link"></i> Vender </a>
+                                        <a href="/cart/{$value.idproduct}/add" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i> Comprar </a>
+                                        <a href="/cart/{$value.idproduct}/" class="view-details-link"><i class="fa fa-link"></i> Vender </a>
                                     </div>
                                 </div>
                                 
